update param field name + endpoint name
