# api/v1alpha1/resource_manager/types.gen.go
@@ -72,8 +72,8 @@ type InstanceIdPath = string
 
 // ListInstancesParams defines parameters for ListInstances.
 type ListInstancesParams struct {
-	// Type Filter service type
-	Type *string `form:"type,omitempty" json:"type,omitempty"`
+	// Provider Filter service provider
+	Provider *string `form:"provider,omitempty" json:"provider,omitempty"`
 
 	// MaxPageSize Maximum number of results per page
 	MaxPageSize *int `form:"max_page_size,omitempty" json:"max_page_size,omitempty"`
